@@ -268,6 +268,8 @@ const char * ldns_version(void);
  * \param[in] tm a struct tm* with the date
  * \return the seconds since epoch
  */
+time_t ldns_mktime_from_utc(const struct tm *tm);
+
 time_t mktime_from_utc(const struct tm *tm);
 
 /**
